--- a/Dev/index.html
+++ b/Dev/index.html
@@ -11,56 +11,58 @@
 		<div class='row'> -->
 			<div class='sidebar-container col-md-3'>
 				<ul>
-					<a href="#">Krossover Konnect</a>
-					<a href="#">Dashboard</a>
-					<a href="#">Profile</a>
-					<a href="#">Leaderboard</a>
-					<a href="#">Badges/liaining</a>
-					<a href="#">Support</a>
-					<a href="#">Chat</a>
+					<li><a href="#">Krossover Konnect</a></li>
+					<li><a href="#">Dashboard</a></li>
+					<li><a href="#">Profile</a></li>
+					<li><a href="#">Leaderboard</a></li>
+					<li><a href="#">Badges/liaining</a></li>
+					<li><a href="#">Support</a></li>
+					<li><a href="#">Chat</a></li>
 				</ul>
 			</div> <!-- sidebar-container -->
 		</div> <!-- row -->
 	</div> <!-- container -->
-<div class='top-nav'>
-	<a href="#">Notification icon</a>
-		<a href="#">My Name</a>
-	</div>
+
 <div class='dashboard'>
 <!-- 	<div class='container'>-->
-
-	<div class='dash_title'>
- 		<h1>Welcome, Mr. Dude</h1>
- 	</div>
- 		<div class='row .col-md-9 left'>
-			<div class='game_stats col-md-6'>
-				<h2>Game Stats by day, week and month in a graph</h2>
-			</div>
-			 <div class='leaderboard col-md-6'>
-			 	<h2>Leaderboard</h2>
-			 	<h3>Top 5 displayed</h3>
-			 	<h3>Current indexer rank</h3>
-			 	<table>
-			 		<li>Mike</li>
-			 		<li>Banun</li>
-			 		<li>Stefan</li>
-			 		<li>Peter</li>
-			 		<li>Craig</li>
-			 	</table>
-			 </div>
-			<div class='current-badge'>
-				<h2>Current badge</h2>
-				<div class='cb-chart'></div>
-			</div>
-			<div class='next-badge'>
-				<h2>Progress next</h2>
-				<div class='nb-chart'></div>
-			</div>
-			<div class='third-badge'>
-				<h2>Earnings YTD</h2>
-				<div class='tb-chart'></div>
-			</div>
+	<div class='top-nav'>
+		<a href="#">Notification icon</a>
+		<a href="#">My Name</a>
+	</div>
+	<div class="dashboard-content">
+		<div class='dash_title'>
+	 		<h1>Welcome, Mr. Dude</h1>
+	 	</div>
+		<div class='row .col-md-9 left'>
+		<div class='game_stats panel'>
+			<h2>Game Stats by day, week and month in a graph</h2>
 		</div>
+		 <div class='leaderboard panel'>
+		 	<h2>Leaderboard</h2>
+		 	<h3>Top 5 displayed</h3>
+		 	<h3>Current indexer rank</h3>
+		 	<table>
+		 		<li>Mike</li>
+		 		<li>Banun</li>
+		 		<li>Stefan</li>
+		 		<li>Peter</li>
+		 		<li>Craig</li>
+		 	</table>
+		 </div>
+		<div class='current-badge panel'>
+			<h2>Current badge</h2>
+			<div class='cb-chart'></div>
+		</div>
+		<div class='next-badge panel'>
+			<h2>Progress next</h2>
+			<div class='nb-chart'></div>
+		</div>
+		<div class='third-badge panel'>
+			<h2>Earnings YTD</h2>
+			<div class='tb-chart'></div>
+		</div>
+		</div>
+	</div>
 <!-- 	</div> -->
 </div>
 	
