--- a/Dev/leaderboard.html
+++ b/Dev/leaderboard.html
@@ -3,20 +3,47 @@
 <head>
 	<title>Krossover Dashboard</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" href="https://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
+	<!-- Latest compiled and minified CSS -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+	<!-- Optional theme -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
+	<!-- Latest compiled and minified JavaScript -->
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 </head>
 <body>
 	<div class='sidebar-container'>
 		<ul>
-			<a href="#">Krossover Konnect</a>
-			<a href="#">Dashboard</a>
-			<a href="#">Profile</a>
-			<a href="#">Leaderboard</a>
-			<a href="#">Badges/Training</a>
-			<a href="#">Support</a>
-			<a href="#">Chat</a>
+			<li class='logo'><a href="#"><img src="images/Krossover logo.png"></a></li>
+			<li><a href="index.html">Dashboard</a></li> 
+			<li><a href="#">Profile</a></li>
+			<li><a href="#">Leaderboard</a> </li>     
+			<li><a href="#">Badges/Training</a></li>
+			<li><a href="#">Support</a></li>
+			<li><a href="#">Chat</a></li>
 		</ul>
 	</div>
-	<table>
+<div class='dashboard'>
+	<div class='top-nav'>
+			<button type="button" class="btn btn-default btn-lg">
+  			<span class="glyphicon glyphicon-inbox" aria-hidden="true"></span>
+			</button>		
+		<a href="#">My Name</a>
+	</div>
+	<section class='container'>
+		<div class='row'>
+			<h2>Featured Profiles</h2>
+			<div class='col-md-2'></div>
+			<div class='col-md-2'></div>
+			<div class='col-md-2'></div>
+			<div class='col-md-2'></div>
+			<div class='col-md-2'></div>
+
+		</div>
+
+
+	</section>
+	<!-- <table>
 		<tr>
 			<th>Rank</th>
 			<th>Name</th>
@@ -31,7 +58,7 @@
 			<td>15</td>
 			<td>Spring</td>
 		</tr>
-	</table>
-
+	</table> -->
+</div>
 </body>
 </html>
