--- a/Dev/profile.html
+++ b/Dev/profile.html
@@ -3,28 +3,74 @@
 <head>
 	<title>Krossover Dashboard</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css"> -->
-	 <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script> -->
+	<link rel="stylesheet" href="https://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
+	<!-- Latest compiled and minified CSS -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+	<!-- Optional theme -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
+	<!-- Latest compiled and minified JavaScript -->
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+	  <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+	  <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
+	  <script>
+		  $(function() {
+		    $( "#progressbar" ).progressbar({
+		      value: 50
+		    });
+		  });
+  		</script>
 </head>
 <body>
 	<!-- <div class='container'>
 		<div class='row'> -->
-			<div class='sidebar-container col-md-3'>
+			<div class='sidebar-container'>
 				<ul>
-					<a href="#">Krossover Konnect</a>
-					<a href="#">Dashboard</a>
-					<a href="#">Profile</a>
-					<a href="#">Leaderboard</a>
-					<a href="#">Badges/Training</a>
-					<a href="#">Support</a>
-					<a href="#">Chat</a>
+					<li class='logo'><a href="#"><img src="images/Krossover logo.png"></a></li>
+					<li><a href="index.html">Dashboard</a></li> 
+					<li><a href="#">Profile</a></li>
+					<li><a href="#">Leaderboard</a> </li>     
+					<li><a href="#">Badges/Training</a></li>
+					<li><a href="#">Support</a></li>
+					<li><a href="#">Chat</a></li>
 				</ul>
 			</div> <!-- sidebar-container -->
 		</div> <!-- row -->
 	</div> <!-- container -->
-<div class='Profile'>
-	<div class=''></div>
+<div class='dashboard'>
+	<div class='top-nav'>
+		<button type="button" class="btn btn-default btn-lg">
+  			<span class="glyphicon glyphicon-inbox" aria-hidden="true"></span>
+			</button>	
+		<a href="#">My Name</a>
+	</div>
+	<div class='Profile'>
+		<div class='bio'>
+			<img src="#" alt="profile_image">
+			<h3>John Doe</h3>
+			<h4>Location</h4>
+			<h4>Current Rank</h4>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		</div> <!-- BIO  -->
+		<div class='rank_progress'>
+			<h2>Rank Progress</h2>
+			<div id="progressbar"></div>
+			<div class="progress">
+  			<div class="progress-bar progress-bar-warning progress-bar-striped" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
+    		<span class="sr-only">60% Complete (warning)</span>
+  </div>
 </div>
+
+		</div>
+		<div class='game_stats'>
+			<h2>Game Stats</h2>
+		</div>
+	</div> <!-- PROFILE --> 
+</div> <!-- DASHBOARD -->
 	
 </body>
 </html>
