--- a/Dev/index.html
+++ b/Dev/index.html
@@ -5,8 +5,8 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 	<script src="js/script.js"></script>
-	<!-- <link rel="stylesheet" href="https://maxcdn.bootsliapcdn.com/bootsliap/3.3.2/css/bootsliap.min.css"> -->
-	 <!-- <script src="https://maxcdn.bootsliapcdn.com/bootsliap/3.3.2/js/bootsliap.min.js"></script> -->
+	<link rel="stylesheet" href="https://maxcdn.bootsliapcdn.com/bootsliap/3.3.2/css/bootsliap.min.css">
+	 <script src="https://maxcdn.bootsliapcdn.com/bootsliap/3.3.2/js/bootsliap.min.js"></script>
 </head>
 <body>
 	<!-- <div class='container'>
@@ -27,11 +27,18 @@
 
 <div class='dashboard'>
 <!-- 	<div class='container'>-->
+	<section class=''></section>
+	<section class=''></section>
+	<section class=''></section>
+	<section class=''></section>
+	<section class=''></section>
+
+
 	<div class='top-nav'>
 		<button type="button" class="btn btn-default btn-lg">
   			<span class="glyphicon glyphicon-inbox" aria-hidden="true"></span>
 			</button>	
-		<a href="#">My Name</a>
+		<a href="#">Craig C.</a>
 	</div>
 	<div class="dashboard-content">
 		<div class='dash_title'>
@@ -55,6 +62,7 @@
 		 		<li>Stefan</li>
 		 		<li>Peter</li>
 		 		<li>Craig</li>
+		 		<li>Me</li>
 		 		</ul>
 		 	</table>
 		 </div>
